--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -4,34 +4,25 @@
 <head>
     <% include ../partials/head %>
     <style>
-        .row-border, #search {
+        p {
+            background-color: #F8F8F8;
             border: solid;
-            border-width: 2px;
-            border-color: #ddd;
-            border-radius: 4px;
-            padding-bottom: 5px;
-            padding-left: 5px;
-        }
-
-        .input-button {
-            display: flex !important;
-        }
-
-        .input-group {
-            margin: 0 auto;
-            padding-bottom: 5px;
+            border-color: #E7E7E7;
+            border-width: 1px;
+            border-radius: 2px;
+            padding: 3px;
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>Browse Movies</h1>
+        <h1>Username's Profile</h1>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Browse</a></li>
+                        <li><a href="/">Browse</a></li>
                         <li><a href="/submit">New Movie</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
@@ -50,20 +41,28 @@
         </nav>
         <div class="row">
             <div class="col-md-12">
-                <div class="input-group">
-                    <input type="text" name="search" id="search" class="form-control" placeholder="Search..." />
-                    <div class="input-button">
-                        <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-                    </div>
-                </div>
+                <h2>Real name: Realname</h2>
             </div>
         </div>
-        <table class="table">
-        <% movies.forEach(function (movie) { %>
-
-        <% }); %>
-        </table>
-        <!-- TODO: Never ending scroll thing -->
+        <div class="row">
+            <div class="col-md-7">
+                <h3>Profile</h3>
+            </div>
+            <div class="col-md-5">
+                <h3>Featured Movie</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5 col-md-offset-7">
+                <h4>Ex-Machina</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-7">
+                <p>Some profile text.<br />Another line.<br />Another line.</p>
+            </div>
+            <img class="col-md-5" src="http://www.joblo.com/posters/images/full/ex-machina-poster.jpg" alt="Ex-Machina Cover">
+        </div>
     </div>
     <% include ../partials/scripts %>
 </body>
