--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -58,27 +58,31 @@
                 </div>
             </div>
         </div>
-        <h2>Sci-Fi</h2>
+    <% movies.forEach(function (genre) { %>
+        <h2><%= genre.genre %></h2>
         <div class="row row-border">
+        <% genre.movies.forEach(function (movie) { %>
             <div class="col-md-2">
                 <div class="row">
-                    <h3>Ex-Machina</h3>
+                    <h3><%= movie.title %></h3>
                 </div>
                 <div class="row">
-                    <img class="col-md-12" src="http://www.joblo.com/posters/images/full/ex-machina-poster.jpg" alt="Ex-Machina Cover">
+                    <img class="col-md-12" src="<%= movie.image %>" alt="<%= movie.title %> Cover">
                 </div>
                 <div class="row">
-                    <div class="col-md-12 collapse in" id="save-button-div" data-toggle="collapse">
-                        <button class="btn btn-primary" id="save-button">Save</button>
+                    <div class="col-md-12 collapse in" id="save-button-div-<%= movie._id %>" data-toggle="collapse">
+                        <button class="btn btn-primary" id="save-button" data-id="<%= movie._id %>">Save</button>
                     </div>
-                    <div class="col-md-12 collapse" id="watched-buttons" data-toggle="collapse">
-                        <button class="btn btn-default watched-btn">Have not watched</button>
-                        <button class="btn btn-primary watched-btn">Have watched</button>
-                        <button class="btn btn-warning watched-btn">Will not watch</button>
+                    <div class="col-md-12 collapse" id="watched-buttons-<%= movie._id %>" data-toggle="collapse">
+                        <button class="btn btn-default watched-btn" data-id="<%= movie._id %>">Have not watched</button>
+                        <button class="btn btn-primary watched-btn" data-id="<%= movie._id %>">Have watched</button>
+                        <button class="btn btn-warning watched-btn" data-id="<%= movie._id %>">Will not watch</button>
                     </div>
                 </div>
             </div>
+        <% }); %>
         </div>
+    <% }); %>
 
         <!-- TODO: Never ending scroll thing -->
     </div>
