--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -59,7 +59,13 @@
             </div>
         </div>
     <% movies.forEach(function (genre) { %>
-        <h2><%= genre.genre %></h2>
+    <div class="row">
+        <h2>
+            <%= genre.genre %>
+            <button data-toggle="collapse" data-target="#<%= genre.genre %>" class="btn btn-default btn-collapse">Collapse</button>
+        </h2>
+    </div>
+    <div class="collapse in" id="<%= genre.genre %>" data-toggle="collapse">
         <div class="row row-border">
         <% genre.movies.forEach(function (movie) { %>
             <div class="col-md-2">
@@ -67,7 +73,7 @@
                     <h3><%= movie.title %></h3>
                 </div>
                 <div class="row">
-                    <img class="col-md-12" src="<%= movie.image %>" alt="<%= movie.title %> Cover">
+                    <img class="img-responsive col-md-12" src="<%= movie.image %>" alt="<%= movie.title %> Cover">
                 </div>
                 <div class="row">
                     <div class="col-md-12 collapse in" id="save-button-div-<%= movie._id %>" data-toggle="collapse">
@@ -82,6 +88,7 @@
             </div>
         <% }); %>
         </div>
+    </div>
     <% }); %>
 
         <!-- TODO: Never ending scroll thing -->
