--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,7 +6,7 @@
 <title>Assignment 4</title>
 
 <!-- Bootstrap -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="/assets/vendor/css/bootstrap.css">
 <link rel="stylesheet" href="/assets/css/styles.css">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
