Login system WIP Also change from Guid to node-uuid

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -12,7 +12,7 @@
         <% include ../partials/nav %>
         <div class="row">
             <div class="col-md-12">
-                <h2>Real name: Realname</h2>
+                <h2>Real name: <%= user.realName %></h2>
             </div>
         </div>
         <div class="row">
