--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -3,42 +3,13 @@
 
 <head>
     <% include ../partials/head %>
-    <style>
-        p {
-            background-color: #F8F8F8;
-            border: solid;
-            border-color: #E7E7E7;
-            border-width: 1px;
-            border-radius: 2px;
-            padding: 3px;
-        }
-    </style>
+    <link type="text/css" ref="stylesheet" src="/assets/css/profile.css" />
 </head>
 
 <body>
     <div class="container">
         <h1>Username's Profile</h1>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/">Browse</a></li>
-                        <li><a href="/submit">New Movie</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/profile">Profile</a></li>
-                                <li><a href="/movies/my">My Movies</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="/logout">Logout</a></li>
-                            </ul>
-                        </li>
-                    </ul>   
-                </div>
-            </div>
-        </nav>
+        <% include ../partials/nav %>
         <div class="row">
             <div class="col-md-12">
                 <h2>Real name: Realname</h2>
