--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <% include ../partials/head %>
-    <link type="text/css" ref="stylesheet" src="/assets/css/index.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/css/index.css" />
 </head>
 
 <body class="container-fluid">
@@ -11,15 +11,13 @@
     <% include ../partials/nav %>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
-                <div class="input-group">
-                    <input type="text" name="search" id="search" class="form-control" placeholder="Search..." />
-                    <span class="input-group-btn">
-                        <button type="button" class="btn btn-secondary">
-                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                        </button>
-                    </span>
-                </div>
+            <div class="input-group">
+                <input type="text" name="search" id="search" class="form-control" placeholder="Search..." />
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-secondary">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                    </button>
+                </span>
             </div>
         </div>
     </section>
