--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -8,4 +8,4 @@
     <script src="/assets/js/movies.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script src="/assets/vendor/js/bootstrap.min.js"></script>
