Fix #8 - EJS rendering issue

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -24,9 +24,9 @@
         </div>
     </section>
 
-<% movies.forEach(function (genre) {
-   include ../partials/genre-carousel
- }); %>
+<% movies.forEach(function (genre) { %>
+<%  include ../partials/genre-carousel %>
+<% }); %>
 
     <!-- TODO: Never ending scroll thing -->
 <% include ../partials/scripts %>
