--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 
 <body class="container-fluid">
     <h1>Browse Movies</h1>
-    <% include ../partials/nav %>
+    <%- include('../partials/nav', { user: user }); %>
     <section class="container-fluid">
         <div class="row">
             <div class="input-group">
@@ -23,7 +23,7 @@
     </section>
 
 <% movies.forEach(function (genre) { %>
-<%  include ../partials/genre-carousel %>
+<%- include('../partials/genre-carousel', { user: user, genre: genre }); %>
 <% }); %>
 
     <!-- TODO: Never ending scroll thing -->
