--- a/views/partials/genre-carousel.ejs
+++ b/views/partials/genre-carousel.ejs
@@ -36,7 +36,7 @@
                     <div class="row">
 
 <%          group.forEach(function (movie) { %>
-<%            include ../partials/movie-panel %>
+<%-           include('../partials/movie-panel', { user: user, movie: movie }); %>
 <%          }); %>
 
                     </div>
