--- a/views/partials/movie-panel.ejs
+++ b/views/partials/movie-panel.ejs
@@ -4,6 +4,7 @@
         <img class="img-responsive col-md-12" src="<%= movie.image %>" alt="<%= movie.title %> Cover">
     </div>
     <div class="row">
+    <% if (user) { %>
         <div class="col-md-12 collapse in" id="save-button-div-<%= movie._id %>" data-toggle="collapse">
             <button class="btn btn-primary" id="save-button" data-id="<%= movie._id %>">Save</button>
         </div>
@@ -21,5 +22,6 @@
                 data-id="<%= movie._id %>"
             >Will not watch</button>
         </div>
+    <% } %>
     </div>
 </div>
