--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,8 +6,9 @@
                 <li><a href="/submit">New Movie</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+            <% if (user !== null) { %>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= user.username %> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/profile">Profile</a></li>
                         <li><a href="/movies/my">My Movies</a></li>
@@ -15,6 +16,9 @@
                         <li><a href="/logout">Logout</a></li>
                     </ul>
                 </li>
+            <% } else { %>
+                <li><a href="/login">Login</a></li>
+            <% } %>
             </ul>
         </div>
     </div>
