--- a/views/partials/movie-panel.ejs
+++ b/views/partials/movie-panel.ejs
@@ -1,27 +1,27 @@
 <div class="col-md-2">
-    <h3><%= movie.title %></h3>
-    <div class="row">
+    <div class="movie-panel row">
         <img class="img-responsive col-md-12" src="<%= movie.image %>" alt="<%= movie.title %> Cover">
-    </div>
-    <div class="row">
-    <% if (user) { %>
-        <div class="col-md-12 collapse in" id="save-button-div-<%= movie._id %>" data-toggle="collapse">
-            <button class="btn btn-primary" id="save-button" data-id="<%= movie._id %>">Save</button>
+        <div class="movie-panel-overlay">
+            <h3><%= movie.title %></h3>
+                <% if (user) { %>
+                    <div class="col-md-12 collapse in" id="save-button-div-<%= movie._id %>" data-toggle="collapse">
+                        <button class="btn btn-primary save-button" data-id="<%= movie._id %>">Save</button>
+                    </div>
+                    <div class="col-md-12 collapse" id="watched-buttons-<%= movie._id %>" data-toggle="collapse">
+                        <button
+                            class="btn btn-default watched-btn"
+                            data-id="<%= movie._id %>"
+                        >Have not watched</button>
+                        <button
+                            class="btn btn-primary watched-btn"
+                            data-id="<%= movie._id %>"
+                        >Have watched</button>
+                        <button
+                            class="btn btn-warning watched-btn"
+                            data-id="<%= movie._id %>"
+                        >Will not watch</button>
+                    </div>
+                <% } %>
         </div>
-        <div class="col-md-12 collapse" id="watched-buttons-<%= movie._id %>" data-toggle="collapse">
-            <button
-                class="btn btn-default watched-btn"
-                data-id="<%= movie._id %>"
-            >Have not watched</button>
-            <button
-                class="btn btn-primary watched-btn"
-                data-id="<%= movie._id %>"
-            >Have watched</button>
-            <button
-                class="btn btn-warning watched-btn"
-                data-id="<%= movie._id %>"
-            >Will not watch</button>
-        </div>
-    <% } %>
     </div>
 </div>
