Increase font size of movie titles on overlays

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -59,6 +59,7 @@ html {
 .movie-panel-overlay h3 {
     margin: 15px 15px;
     color: #fff;
+    font-size: 28px;
 }
 
 /* dirty, but w/e. selects the button container divs */
