--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <% if (typeof pageTitle == 'undefined') { %>
+        <% var pageTitle = ''; %>
+    <% } %>
     <% include ../partials/head %>
     <link type="text/css" rel="stylesheet" href="/assets/css/index.css" />
 </head>
