--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <% include ../partials/head %>
+    <%- include('../partials/head', { pageTitle: 'Login' }); %>
 </head>
 
 <body>
