--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <% include ../partials/head %>
+    <%- include('../partials/head', { pageTitle: user.username }); %>
     <link type="text/css" ref="stylesheet" src="/assets/css/profile.css" />
 </head>
 
 <body>
     <div class="container">
-        <h1>Username's Profile</h1>
+        <h1><%= user.username %>'s Profile</h1>
         <% include ../partials/nav %>
         <div class="row">
             <div class="col-md-12">
