Client-side form

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -30,7 +30,8 @@
         </div>
         <div class="row">
             <div class="col-md-7">
-                <p>Some profile text.<br />Another line.<br />Another line.</p>
+                <!-- TODO: This will allow for HTML in the user's profile to be rendered. This is a problem. -->
+                <p id="profile-text" data-id="<%= user._id %>"><%- user.profileText ? user.profileText : "<i>Uh oh, there's nothing here!</i>" %></p>
             </div>
             <img class="col-md-5" src="http://www.joblo.com/posters/images/full/ex-machina-poster.jpg" alt="Ex-Machina Cover">
         </div>
