--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,6 +13,7 @@
                         <li><a href="/profile">Profile</a></li>
                         <li><a href="/movies/my">My Movies</a></li>
                         <li role="separator" class="divider"></li>
+                        <li><a href="/settings">Settings</a></li>
                         <li><a href="/logout">Logout</a></li>
                     </ul>
                 </li>
