Improve the expand button on carousels
Use arrows to indicate whether the section is expanded or not.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -35,6 +35,15 @@
     align-items: center;
 }
 
+.genre-carousel .expand-button {
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+}
+
 html {
     padding-left: 5px;
     padding-right: 5px;
