--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -6,3 +6,25 @@ p {
     border-radius: 2px;
     padding: 3px;
 }
+
+body, p {
+    background-color: #34495e;
+    color: #ecf0f1;
+    border: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: #ecf0f1;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+h3 {
+    font-size: 20px;
+}
