--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -7,32 +7,34 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <h1><%= user.username %>'s Profile</h1>
         <% include ../partials/nav %>
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Real name: <%= user.realName %></h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Real name: <%= user.realName %></h2>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-7">
-                <h3>Profile</h3>
+            <div class="row">
+                <div class="col-md-7">
+                    <h3>Profile</h3>
+                </div>
+                <div class="col-md-5">
+                    <h3>Featured Movie</h3>
+                </div>
             </div>
-            <div class="col-md-5">
-                <h3>Featured Movie</h3>
+            <div class="row">
+                <div class="col-md-5 col-md-offset-7">
+                    <h4>Ex-Machina</h4>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-5 col-md-offset-7">
-                <h4>Ex-Machina</h4>
+            <div class="row">
+                <div class="col-md-7">
+                    <p>Some profile text.<br />Another line.<br />Another line.</p>
+                </div>
+                <img class="col-md-5" src="http://www.joblo.com/posters/images/full/ex-machina-poster.jpg" alt="Ex-Machina Cover">
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-7">
-                <p>Some profile text.<br />Another line.<br />Another line.</p>
-            </div>
-            <img class="col-md-5" src="http://www.joblo.com/posters/images/full/ex-machina-poster.jpg" alt="Ex-Machina Cover">
         </div>
     </div>
     <% include ../partials/scripts %>
