--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -4,11 +4,12 @@
 <head>
     <%- include('../partials/head', { pageTitle: user.username }); %>
     <link type="text/css" ref="stylesheet" src="/assets/css/profile.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/css/index.css" />
 </head>
 
 <body class="container-fluid">
-    <% include ../partials/nav %>
     <h1><%= user.username %>'s Profile</h1>
+    <% include ../partials/nav %>
         <div class="row">
             <div class="col-md-12">
                 <h2>Real name: <%= user.realName %></h2>
