Fix unclickable links on movie overlay (#34)
Fixes #34. One of bootstrap's carousel click event handlers prevents
event propagation if 'data-target' is not specified on the target.
Hence, add the attribute to the carousel and give it a meaningless
value.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -67,8 +67,15 @@ html {
 
 .movie-panel-overlay h3 {
     margin: 15px 15px;
-    color: #fff;
     font-size: 28px;
+}
+
+.movie-panel-overlay a {
+    color: #ecf0f1;
+}
+
+.movie-panel-overlay a:hover {
+    text-decoration: underline;
 }
 
 /* dirty, but w/e. selects the button container divs */
