--- a/views/partials/genre-carousel.ejs
+++ b/views/partials/genre-carousel.ejs
@@ -15,6 +15,7 @@
         data-toggle="collapse"
         data-interval="false"
         data-ride="carousel"
+        data-target="see-issue-34"
     >
         <div class="carousel-inner" role="listbox">
 
