Fix unclickable links on movie overlay (#34)
Fixes #34. One of bootstrap's carousel click event handlers prevents
event propagation if 'data-target' is not specified on the target.
Hence, add the attribute to the carousel and give it a meaningless
value.

--- a/views/partials/genre-carousel.ejs
+++ b/views/partials/genre-carousel.ejs
@@ -15,13 +15,14 @@
         data-toggle="collapse"
         data-interval="false"
         data-ride="carousel"
+        data-target="see-issue-34"
     >
         <div class="carousel-inner" role="listbox">
 
 <%    var movieArrClone = movies.slice();
             var groups  = [];
             var isFirst = true;
-      var watchOptions  = (watchOptions) ? watchOptions : undefined;
+            var watchOptions  = (watchOptions) ? watchOptions : undefined;
 
             while (movieArrClone.length > 0)  {
                 groups.push(movieArrClone.splice(0, 6));
