--- a/views/pages/settings.ejs
+++ b/views/pages/settings.ejs
@@ -3,10 +3,11 @@
 
 <head>
     <%- include('../partials/head', { pageTitle: 'Settings' }); %>
+    <link rel="stylesheet" type="text/css" href="/assets/css/form.css" />
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <h1>Settings</h1>
         <% include ../partials/nav %>
         <form class="form-horizontal" id="edit-form" action="/api/user/update" method="POST" data-toggle="validator" role="form">
