--- a/views/pages/submitMovie.ejs
+++ b/views/pages/submitMovie.ejs
@@ -3,10 +3,11 @@
 
 <head>
     <%- include('../partials/head', { pageTitle: 'Submit' }); %>
+    <link rel="stylesheet" type="text/css" href="/assets/css/form.css" />
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <h1>Submit</h1>
         <% include ../partials/nav %>
         <form class="form-horizontal" action="/api/movies/submit" method="POST">
