--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -56,6 +56,7 @@
         </main>
     </div>
     <% include ../partials/scripts %>
+    <script src="/assets/js/login.js"></script>
 </body>
 
 </html>
