--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,7 @@
     <% } %>
     <% include ../partials/head %>
     <link type="text/css" rel="stylesheet" href="/assets/css/index.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/css/form.css" />
 </head>
 
 <body class="container-fluid">
