Reset animations after rating movie

--- a/views/partials/movie-panel.ejs
+++ b/views/partials/movie-panel.ejs
@@ -40,10 +40,10 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <button type="submit" data-id="<%= movie._id %>" class="btn btn-success save-rating-btn">Save</button>
+                                    <button type="button" data-id="<%= movie._id %>" class="btn btn-success save-rating-btn">Save</button>
                                 </div>
                                 <div class="col-md-6">
-                                    <button type="button" class="btn btn-warning">Cancel</button>
+                                    <button type="button" data-id="<%= movie._id %>" class="btn btn-warning cancel-rating-btn">Cancel</button>
                                 </div>
                             </div>
                         </form>
