--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,3 +1,4 @@
+<h1>Ghetto IMDB</h1>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="collapse navbar-collapse">
